--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "nyholm/psr7": "^1.8",
         "php-http/guzzle7-adapter": "^1.0",
         "symfony/http-client": "^6.3",
-        "symfony/mailgun-mailer": "^6.3"
+        "symfony/mailgun-mailer": "^6.3",
+        "symfony/postmark-mailer": "^6.3",
+        "wildbit/postmark-php": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
