--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "coconutcraig/laravel-postmark": "^3.1",
+        "flexflux/laravel-elastic-email": "^2.1",
         "guzzlehttp/guzzle": "^7.8",
         "ichtrojan/laravel-otp": "^1.4",
         "laravel/framework": "^10.10",
