--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "flexflux/laravel-elastic-email": "^2.1",
         "guzzlehttp/guzzle": "^7.8",
         "ichtrojan/laravel-otp": "^1.4",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
