--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,6 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "coconutcraig/laravel-postmark": "^3.1",
-        "flexflux/laravel-elastic-email": "^2.1",
         "guzzlehttp/guzzle": "^7.8",
         "ichtrojan/laravel-otp": "^1.4",
         "intervention/image": "^2.7",
@@ -16,10 +14,7 @@
         "laravel/tinker": "^2.8",
         "nyholm/psr7": "^1.8",
         "php-http/guzzle7-adapter": "^1.0",
-        "symfony/http-client": "^6.3",
-        "symfony/mailgun-mailer": "^6.3",
-        "symfony/postmark-mailer": "^6.3",
-        "wildbit/postmark-php": "^4.0"
+        "symfony/http-client": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
