--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.4",
         "laravel/tinker": "^2.8",
         "nyholm/psr7": "^1.8",
         "php-http/guzzle7-adapter": "^1.0",
